--- a/app/src/main/res/layout/activity_firstmeat.xml
+++ b/app/src/main/res/layout/activity_firstmeat.xml
@@ -1,37 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.pampang.nav.utils.ZoomLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MapNav.FirstMeatMapView">
 
-    <FrameLayout
+    <com.pampang.nav.utils.ZoomLayout
+        android:id="@+id/zoom_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <!-- 🗺️ Background Map -->
-    <ImageView
-        android:id="@+id/mapImageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/firstmeatpath"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <!-- 🧭 Path Layer -->
-    <com.pampang.nav.MapNav.FirstMeatPathView
-        android:id="@+id/firstMeatPath"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+            <!-- 🗺️ Background Map -->
+            <ImageView
+                android:id="@+id/mapImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/firstmeatpath" />
+
+            <!-- 🧭 Path Layer -->
+            <com.pampang.nav.MapNav.FirstMeatPathView
+                android:id="@+id/firstMeatPath"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </FrameLayout>
+    </com.pampang.nav.utils.ZoomLayout>
 
     <!-- 🎯 Buttons Container -->
     <LinearLayout
+        android:id="@+id/buttonsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="32dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnGo"
@@ -52,6 +61,4 @@
             android:textColor="@android:color/white" />
     </LinearLayout>
 
-</FrameLayout>
-
-</com.pampang.nav.utils.ZoomLayout>
+</RelativeLayout>
