--- a/app/src/main/res/layout/item_group_chat_received.xml
+++ b/app/src/main/res/layout/item_group_chat_received.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="@{chatMessage.senderName}"/>
+            android:text="@{chatMessage.senderName + ` (` + chatMessage.senderRole + `)`}"/>
 
         <TextView
             android:id="@+id/text_view_message"
