--- a/app/src/main/res/layout/item_group_chat_sent.xml
+++ b/app/src/main/res/layout/item_group_chat_sent.xml
@@ -20,8 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:visibility="gone"
-            android:text="@{chatMessage.senderName}"/>
+            android:text="@{chatMessage.senderName + ` (` + chatMessage.senderRole + `)`}"/>
 
         <TextView
             android:id="@+id/text_view_message"
